@@ -39,6 +39,8 @@ import ucar.nc2.constants.FeatureType;
 import ucar.nc2.dataset.NetcdfDataset;
 import ucar.nc2.dt.grid.GridDataset;
 import ucar.nc2.VariableSimpleIF;
+import ucar.nc2.units.DateRange;
+import ucar.unidata.geoloc.LatLonRect;
 
 import java.io.IOException;
 import java.io.InputStream;
@@ -81,7 +83,10 @@ public class CdmRemoteFeatureDataset {
 
     } else {
       List<VariableSimpleIF> dataVars = FeatureDatasetPointXML.getDataVariables(doc);
-      return new PointDatasetRemote(ft, uri, dataVars);
+      LatLonRect bb = FeatureDatasetPointXML.getSpatialExtent(doc);
+      DateRange dr = FeatureDatasetPointXML.getTimeSpan(doc);
+
+      return new PointDatasetRemote(ft, uri, dataVars, bb, dr);
     }
   }
 
